--- a/assets/forgot.html
+++ b/assets/forgot.html
@@ -38,7 +38,7 @@
 						</div>
 						<div class="card-footer py-3 border-0">
 							<div class="text-center">
-								Remember your password? <a href="index.html" class="text-dark">Login</a>
+								Remember your password? <a href="../index.html" class="text-dark">Login</a>
 							</div>
 						</div>
 					</div>
