--- a/assets/register.html
+++ b/assets/register.html
@@ -58,7 +58,7 @@
 						</div>
 						<div class="card-footer py-3 border-0">
 							<div class="text-center">
-								Already have an account? <a href="index.html" class="text-dark">Login</a>
+								Already have an account? <a href="../index.html" class="text-dark">Login</a>
 							</div>
 						</div>
 					</div>
